--- a/ProyectoFinalAG/nbproject/project.properties
+++ b/ProyectoFinalAG/nbproject/project.properties
@@ -60,7 +60,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=practica3ag.Practica3AG
+main.class=practica3ag.ProyectoFinalAG
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
